# DnmGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
Examples/CopyTest/: CMakeLists.txt  main.cpp
Examples/Sprite/: CMakeLists.txt  main.cpp
Header/DnmGL/: ContextLoader.hpp  DnmGL.hpp  Sprite.hpp
Header/DnmGL/D3D12/: Buffer.hpp  CommandBuffer.hpp  Context.hpp  Framebuffer.hpp  Image.hpp  Pipeline.hpp  ResourceManager.hpp  Sampler.hpp  Shader.hpp  ToDxgiFormat.hpp
Header/DnmGL/Utility/: Counter.hpp  Flag.hpp  Macros.hpp  Math.hpp
Header/DnmGL/Vulkan/: Buffer.hpp  CommandBuffer.hpp  Context.hpp  Framebuffer.hpp  Image.hpp  Pipeline.hpp  ResourceManager.hpp  Sampler.hpp  Shader.hpp  ToVkFormat.hpp
Shaders/: DnmGL.slang.lib  Sprite.slang  compile.bat  compile.sh
Shaders/D3D12/: Sprite.dxil
Shaders/Vulkan/: Sprite.spv
Src/: DnmGL.cpp  ShaderCompiler.cpp
Src/D3D12/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Framebuffer.cpp  Image.cpp  Pipeline.cpp  ResourceManager.cpp  Sampler.cpp  Shader.cpp
Src/Vulkan/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Framebuffer.cpp  Image.cpp  Pipeline.cpp  ResourceManager.cpp  Sampler.cpp  Shader.cpp  vma_impl.cpp
